[Mac] Time elapsed should be right-aligned https://bugs.webkit.org/show_bug.cgi?id=143927
Reviewed by Eric Carlson.

Current time is left-aligned, which is visually jarring when going from < 1 hour to > 1 hour.

* Modules/mediacontrols/mediaControlsApple.css:
(audio::-webkit-media-controls-current-time-display): Set justify-content to flex-end.
(audio::-webkit-media-controls-time-remaining-display): Explicitly set justify-content to flex-start.


Canonical link: https://commits.webkit.org/161915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182988 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/Modules/mediacontrols/mediaControlsApple.css
+++ b/Source/WebCore/Modules/mediacontrols/mediaControlsApple.css
@@ -496,6 +496,7 @@ audio::-webkit-media-controls-current-time-display {
     margin-right: 8px;
     width: 32px;
     min-width: 32px;
+    -webkit-justify-content: flex-end;
 }
 
 video::-webkit-media-controls-time-remaining-display,
@@ -504,6 +505,7 @@ audio::-webkit-media-controls-time-remaining-display {
     margin-right: 16px;
     width: 37px;
     min-width: 37px;
+    -webkit-justify-content: flex-start;
 }
 
 video::-webkit-media-controls-time-remaining-display.five-digit-time,
